RESOLVED FIXED136432
[WinCairo] Memory cache capacity is not set.
https://bugs.webkit.org/show_bug.cgi?id=136432
Summary [WinCairo] Memory cache capacity is not set.
peavo
Reported 2014-09-01 11:06:38 PDT
This leaves us with the default capacity, which is quite low, causing images to be removed from the cache earlier than necessary. AppleWin already has code for this, which we can reuse.
Attachments
Patch (4.69 KB, patch)
2014-09-01 11:10 PDT, peavo
no flags
Patch (9.32 KB, patch)
2014-09-02 10:07 PDT, peavo
no flags
peavo
Comment 1 2014-09-01 11:10:35 PDT
Alex Christensen
Comment 2 2014-09-01 14:23:57 PDT
Should there be curl equivalents of CFURLSetMemoryCapacity and CFURLSetDiskCapacity?
peavo
Comment 3 2014-09-02 10:07:22 PDT
peavo
Comment 4 2014-09-02 10:09:35 PDT
(In reply to comment #2) > Should there be curl equivalents of CFURLSetMemoryCapacity and CFURLSetDiskCapacity? Thanks for reviewing, updated patch with curl equivalent of CFURLSetDiskCapacity. I don't think there is something similar for CFURLSetMemoryCapacity.
Alex Christensen
Comment 5 2014-09-02 10:44:41 PDT
This looks good to me. I'm not sure if WinCairo even has something like the CFURL cache, though. Brent, do you know?
Alex Christensen
Comment 6 2014-09-02 22:28:26 PDT
Comment on attachment 237501 [details] Patch CFURLCacheSetMemoryCapacity and CFURLCacheSetDiskCapacity seem to be undocumented :( CurlCacheManager::setStorageSizeLimit just changes m_storageSizeLimit, which defaults to 50MB but this could increase it to 175MB if there is an incredible amount of space on the disk. This seems ok to me.
WebKit Commit Bot
Comment 7 2014-09-02 23:05:00 PDT
Comment on attachment 237501 [details] Patch Clearing flags on attachment: 237501 Committed r173200: <http://trac.webkit.org/changeset/173200>
WebKit Commit Bot
Comment 8 2014-09-02 23:05:03 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 9 2014-09-02 23:36:07 PDT
(In reply to comment #6) > (From update of attachment 237501 [details]) > CFURLCacheSetMemoryCapacity and CFURLCacheSetDiskCapacity seem to be undocumented :( > > CurlCacheManager::setStorageSizeLimit just changes m_storageSizeLimit, which defaults to 50MB but this could increase it to 175MB if there is an incredible amount of space on the disk. This seems ok to me. Thanks!
Brent Fulgham
Comment 10 2014-09-03 09:13:37 PDT
Note: This broke the Apple Windows build because it expected cacheMemoryCapacity (and cacheDiskCapacity) to be CFIndex type. Fixed in <http://trac.webkit.org/changeset/173207>.
peavo
Comment 11 2014-09-03 10:11:05 PDT
(In reply to comment #10) > Note: This broke the Apple Windows build because it expected cacheMemoryCapacity (and cacheDiskCapacity) to be CFIndex type. Fixed in <http://trac.webkit.org/changeset/173207>. Thanks for fixing it, and sorry for the inconvenience ...
Note You need to log in before you can comment on or make changes to this bug.