[WinCairo] Memory cache capacity is not set. https://bugs.webkit.org/show_bug.cgi?id=136432

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-09-02
Reviewed by Alex Christensen.

Reuse code from AppleWin to set memory and disk cache capacity.

* WebKitSystemBits.cpp:
(WebVolumeFreeSize):
* WebKitSystemBits.h:
* WebView.cpp:
(WebView::setCacheModel):

Canonical link: https://commits.webkit.org/154267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173200 268f45cc-cd09-0410-ab3c-d52691b4dbfc